dataset1235/2025-2/1153765216/users/3635356750/executions/2747719322_3921830315.log
== SUBMISSION (2025-08-23 23:33:26)
-- CODE: 
litros = float(input())
valor_gasolina = litros * 2.86
subtotal = valor_gasolina + 50.00
icms = subtotal * 0.34
total = subtotal + icms
print(f"{total:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:09:00)
-- CODE: 
litros_abastecidos=ler_entrada()

preco_gasolina = 2.86

valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina

custo_total_sem_icms = custo_gasolina + valor_troca_oleo

icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms

valor_total_pago_arredondado = arredondar(valor_total_pago , 2)

exibir(valor_total_pago_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:05:27)
-- CODE: 
litros_abastecidos=ler_entrada(
preco_gasolina=2.86
valor_troca_oleo = 50.00
custo_gasolina =litros_abastecidos * preco_gasolina
custo_total_sem_icms = custo_gasolina + valor_troca_oleo
icms= custo_total_sem_icms * 0.34
valor_total_pago=custo_total_sem_icms + icms
valor_total_pago_arredondado = arredondar(valor_total_pago , 2)
exibir(valor_total_pago_arredondado)
                                        

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:23:44)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86
valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_servicos = custo_gasolina + valor_troca_oleo
icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms
valor_total_pago_arredondado = ARREDONDAR(valor_total_a_pagar , 2)

EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:25:57)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86
valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_servicos = custo_gasolina + valor_troca_oleo
icms= custo_total_servicos * 0.34

valor_total_a_pagar = custo_total_servicos + icms
valor_total_a_pagar_arredondado = ARREDONDAR(valor_total_a_pagar , 2)

EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:13:23)
-- CODE: 
Ler litros_abastecidos

preco_gasolina = 2.86

valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina

custo_total_sem_icms = custo_gasolina + valor_troca_oleo

icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms

valor_total_pago_arredondado = arredondar(valor_total_pago , 2)

exibir(valor_total_pago_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 1
    Ler litros_abastecidos
        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 1
    Ler litros_abastecidos
        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 1
    Ler litros_abastecidos
        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 1
    Ler litros_abastecidos
        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 1
    Ler litros_abastecidos
        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 1
    Ler litros_abastecidos
        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:00:28)
-- CODE: 
litros=float(input())
valor_gasolina = litros*2.86
subtotal=valor_gasolina+50.00
icms=subtotal*0.34
total=subtotal+ icms
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:19:49)
-- CODE: 
litros_abastecidos

preco_gasolina = 2.86

valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina

custo_total_sem_icms = custo_gasolina + valor_troca_oleo

icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms

valor_total_pago_arredondado = arredondar(valor_total_a_pagar , 2)
exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:21:58)
-- CODE: 
litros=float(input())
valor_gasolina = litros*2.86
subtotal=valor_gasolina+50.00
icms=subtotal*0.34
total=subtotal+ icms
print(f"{total:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:22:26)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86
valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_sem_icms = custo_gasolina + valor_troca_oleo
icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms
valor_total_pago_arredondado = ARREDONDAR(valor_total_a_pagar , 2)

EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:20:29)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86

valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina

custo_total_sem_icms = custo_gasolina + valor_troca_oleo

icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms

valor_total_pago_arredondado = arredondar(valor_total_a_pagar , 2)
exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 16
    exibir "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:21:38)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86

valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina

custo_total_sem_icms = custo_gasolina + valor_troca_oleo

icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms

valor_total_pago_arredondado = ARREDONDAR(valor_total_a_pagar , 2)
EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 16
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 16
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 16
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 16
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 16
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 16
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:19:25)
-- CODE: 
litros_abastecidos

preco_gasolina = 2.86

valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina

custo_total_sem_icms = custo_gasolina + valor_troca_oleo

icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms

valor_total_pago_arredondado = arredondar(valor_total_a_pagar , 2)
(valoexibir "O valor total a ser pago e:R$,valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 16
    (valoexibir "O valor total a ser pago e:R$,valor_total_a_paga_arredondado)                                        
                ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 16
    (valoexibir "O valor total a ser pago e:R$,valor_total_a_paga_arredondado)                                        
                ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 16
    (valoexibir "O valor total a ser pago e:R$,valor_total_a_paga_arredondado)                                        
                ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 16
    (valoexibir "O valor total a ser pago e:R$,valor_total_a_paga_arredondado)                                        
                ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 16
    (valoexibir "O valor total a ser pago e:R$,valor_total_a_paga_arredondado)                                        
                ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 16
    (valoexibir "O valor total a ser pago e:R$,valor_total_a_paga_arredondado)                                        
                ^
SyntaxError: unterminated string literal (detected at line 16)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:22:33)
-- CODE: 
litros=float(input())
valor_gasolina = litros*2.86
subtotal=valor_gasolina+50.00
icms=subtotal*0.34
total=subtotal+ icms
print(f"{total:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:10:37)
-- CODE: 
litros_abastecidos = ler_entrada()

preco_gasolina = 2.86

valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina

custo_total_sem_icms = custo_gasolina + valor_troca_oleo

icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms

valor_total_pago_arredondado = arredondar(valor_total_pago , 2)

exibir(valor_total_pago_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos = ler_entrada()
                         ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos = ler_entrada()
                         ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos = ler_entrada()
                         ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos = ler_entrada()
                         ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos = ler_entrada()
                         ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos = ler_entrada()
                         ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:15:44)
-- CODE: 
litros_abastecidos

preco_gasolina = 2.86

valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina

custo_total_sem_icms = custo_gasolina + valor_troca_oleo

icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms

valor_total_pago_arredondado = arredondar(valor_total_pago , 2)
(valor_total_pago_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos
NameError: name 'litros_abastecidos' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:22:19)
-- CODE: 
litros=float(input())
valor_gasolina = litros*2.86
subtotal=valor_gasolina+50.00
icms=subtotal*0.34
total=subtotal+ icms
print(f"{total:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:33:10)
-- CODE: 
litros = float(input())
valor_gasolina = litros * 2.86
subtotal = valor_gasolina + 50.00
icms = subtotal * 0.34
total = subtotal + icms
print(f"{total:2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.856960
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.846708
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.620000
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.951760
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.992652
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.566832
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:33:11)
-- CODE: 
litros = float(input())
valor_gasolina = litros * 2.86
subtotal = valor_gasolina + 50.00
icms = subtotal * 0.34
total = subtotal + icms
print(f"{total:2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.856960
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.846708
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.620000
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.951760
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.992652
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.566832
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:25:58)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86
valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_servicos = custo_gasolina + valor_troca_oleo
icms= custo_total_servicos * 0.34

valor_total_a_pagar = custo_total_servicos + icms
valor_total_a_pagar_arredondado = ARREDONDAR(valor_total_a_pagar , 2)

EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:25:23)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86
valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_servicos = custo_gasolina + valor_troca_oleo
icms= custo_total_servicos * 0.34

valor_total_a_pagar = custo_total_servicos + icms
valor_total_a_pago_arredondado = ARREDONDAR(valor_total_a_pagar , 2)

EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:13:33)
-- CODE: 


preco_gasolina = 2.86

valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina

custo_total_sem_icms = custo_gasolina + valor_troca_oleo

icms= custo_total_sem_icms * 0.34

valor_total_pago = custo_total_sem_icms + icms

valor_total_pago_arredondado = arredondar(valor_total_pago , 2)

exibir(valor_total_pago_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    custo_gasolina = litros_abastecidos * preco_gasolina
                     ^^^^^^^^^^^^^^^^^^
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    custo_gasolina = litros_abastecidos * preco_gasolina
                     ^^^^^^^^^^^^^^^^^^
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    custo_gasolina = litros_abastecidos * preco_gasolina
                     ^^^^^^^^^^^^^^^^^^
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    custo_gasolina = litros_abastecidos * preco_gasolina
                     ^^^^^^^^^^^^^^^^^^
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    custo_gasolina = litros_abastecidos * preco_gasolina
                     ^^^^^^^^^^^^^^^^^^
NameError: name 'litros_abastecidos' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    custo_gasolina = litros_abastecidos * preco_gasolina
                     ^^^^^^^^^^^^^^^^^^
NameError: name 'litros_abastecidos' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:21:20)
-- CODE: 
litros=float(input())
valor_gasolina = litros*2.86
subtotal=valor_gasolina+50.00
icms=subtotal*0.34
total=subtotal+ icms
print(f"{total:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:07:23)
-- CODE: 
litros_abastecidos=ler_entrada(
preco_gasolina=2.86
valor_troca_oleo = 50.00
custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_sem_icms = custo_gasolina + valor_troca_oleo
icms= custo_total_sem_icms * 0.34
valor_total_pago = custo_total_sem_icms + icms
valor_total_pago_arredondado = arredondar(valor_total_pago , 2)
exibir(valor_total_pago_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 1
    litros_abastecidos=ler_entrada(
                                  ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:07:49)
-- CODE: 
litros_abastecidos=ler_entrada()
preco_gasolina=2.86
valor_troca_oleo = 50.00
custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_sem_icms = custo_gasolina + valor_troca_oleo
icms= custo_total_sem_icms * 0.34
valor_total_pago = custo_total_sem_icms + icms
valor_total_pago_arredondado = arredondar(valor_total_pago , 2)
exibir(valor_total_pago_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:24:15)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86
valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_servicos = custo_gasolina + valor_troca_oleo
icms= custo_total_servicos * 0.34

valor_total_pago = custo_total_sem_icms + icms
valor_total_pago_arredondado = ARREDONDAR(valor_total_a_pagar , 2)

EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:07:48)
-- CODE: 
litros_abastecidos=ler_entrada()
preco_gasolina=2.86
valor_troca_oleo = 50.00
custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_sem_icms = custo_gasolina + valor_troca_oleo
icms= custo_total_sem_icms * 0.34
valor_total_pago = custo_total_sem_icms + icms
valor_total_pago_arredondado = arredondar(valor_total_pago , 2)
exibir(valor_total_pago_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros_abastecidos=ler_entrada()
                       ^^^^^^^^^^^
NameError: name 'ler_entrada' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:26:12)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86
valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_servicos = custo_gasolina + valor_troca_oleo
icms= custo_total_servicos * 0.34

valor_total_a_pagar = custo_total_servicos + icms
valor_total_a_pagar_arredondado = ARREDONDAR(valor_total_a_pagar , 2)

EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:25:58)
-- CODE: 
LER litros_abastecidos

preco_gasolina = 2.86
valor_troca_oleo = 50.00

custo_gasolina = litros_abastecidos * preco_gasolina
custo_total_servicos = custo_gasolina + valor_troca_oleo
icms= custo_total_servicos * 0.34

valor_total_a_pagar = custo_total_servicos + icms
valor_total_a_pagar_arredondado = ARREDONDAR(valor_total_a_pagar , 2)

EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 13
    EXIBIR "O valor total a ser pago e:R$",valor_total_a_paga_arredondado)                                        
                                                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:22:20)
-- CODE: 
litros=float(input())
valor_gasolina = litros*2.86
subtotal=valor_gasolina+50.00
icms=subtotal*0.34
total=subtotal+ icms
print(f"{total:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
